--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.6.3",
     "react-scripts": "^2.1.1",
     "react-router-dom": "^4.3.1",
-    "axios": "^0.18.0",
+    "axios": ">=0.21.1",
     "mdbreact": "^4.16.0"
   },
   "scripts": {
